# serializer version: 1
# name: test_sensor_wrapper[DeltaIntegerWrapper-demo_integer_sum-{"unit": "%","min": 0,"max": 1000,"scale": 1,"step": 1}-123]
  dict({
    'native_unit': '%',
    'state': 0,
    'suggested_unit': None,
  })
# ---
# name: test_sensor_wrapper[ElectricityCurrentJsonWrapper-demo_json-{}-{"electricCurrent": 599.552, "power": 6.912, "voltage": 52.7}]
  dict({
    'native_unit': 'A',
    'state': 599.552,
    'suggested_unit': None,
  })
# ---
# name: test_sensor_wrapper[ElectricityCurrentRawWrapper-demo_raw-{}-Ag8JJQAASAAACAAAAAAACGME]
  dict({
    'native_unit': 'mA',
    'state': 72,
    'suggested_unit': 'A',
  })
# ---
# name: test_sensor_wrapper[ElectricityPowerJsonWrapper-demo_json-{}-{"electricCurrent": 599.552, "power": 6.912, "voltage": 52.7}]
  dict({
    'native_unit': 'kW',
    'state': 6.912,
    'suggested_unit': None,
  })
# ---
# name: test_sensor_wrapper[ElectricityPowerRawWrapper-demo_raw-{}-Ag8JJQAASAAACAAAAAAACGME]
  dict({
    'native_unit': 'W',
    'state': 8,
    'suggested_unit': 'kW',
  })
# ---
# name: test_sensor_wrapper[ElectricityVoltageJsonWrapper-demo_json-{}-{"electricCurrent": 599.552, "power": 6.912, "voltage": 52.7}]
  dict({
    'native_unit': 'V',
    'state': 52.7,
    'suggested_unit': None,
  })
# ---
# name: test_sensor_wrapper[ElectricityVoltageRawWrapper-demo_raw-{}-Ag8JJQAASAAACAAAAAAACGME]
  dict({
    'native_unit': 'V',
    'state': 234.1,
    'suggested_unit': None,
  })
# ---
# name: test_sensor_wrapper[WindDirectionEnumWrapper-demo_enum-{"range": ["north", "north_north_east", "north_east","east_north_east","east","east_south_east","south_east","south_south_east","south", "south_south_west", "south_west", "west_south_west", "west", "west_north_west", "north_west", "north_north_west"]}-north_north_east]
  dict({
    'native_unit': None,
    'options': list([
      'north',
      'north_north_east',
      'north_east',
      'east_north_east',
      'east',
      'east_south_east',
      'south_east',
      'south_south_east',
      'south',
      'south_south_west',
      'south_west',
      'west_south_west',
      'west',
      'west_north_west',
      'north_west',
      'north_north_west',
    ]),
    'state': 22.5,
    'suggested_unit': None,
  })
# ---
